// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefinementList renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-refinement-list>
      
      
      
      <div
        class="ais-RefinementList"
      >
        
        
        
        
  
        
        <ul
          class="ais-RefinementList-list"
        >
          
          
          
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foo"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    foo
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="bar"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    bar
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foobar"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    foobar
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="barfoo"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    barfoo
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          
        
        </ul>
        
  
        
        
        
      
      </div>
      
    
    </ng-ais-refinement-list>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`RefinementList renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-refinement-list>
      
      
      
      <div
        class="ais-RefinementList"
      >
        
        
        
        
  
        
        <ul
          class="ais-RefinementList-list"
        >
          
          
          
          
        
        </ul>
        
  
        
        
        
      
      </div>
      
    
    </ng-ais-refinement-list>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`RefinementList should apply \`transformItems\` if specified 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-refinement-list>
      
      
      
      <div
        class="ais-RefinementList"
      >
        
        
        
        
  
        
        <ul
          class="ais-RefinementList-list"
        >
          
          
          
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foo"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    transformed - foo
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          <li
            class="ais-RefinementList-item ais-RefinementList-item--selected"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="bar"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    transformed - bar
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="foobar"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    transformed - foobar
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          <li
            class="ais-RefinementList-item"
          >
            
            
            <label
              class="ais-RefinementList-label"
            >
              
              
              <input
                class="ais-RefinementList-checkbox"
                type="checkbox"
                value="barfoo"
              />
              
              
              <span
                class="ais-RefinementList-labelText"
              >
                
                
                <ng-ais-highlight
                  attributename="highlighted"
                  ng-reflect-attribute-name="highlighted"
                  ng-reflect-hit="[object Object]"
                >
                  <span
                    class="ais-Highlight"
                  >
                    transformed - barfoo
                  </span>
                </ng-ais-highlight>
                
              
              </span>
              
              
              <span
                class="ais-RefinementList-count"
              >
                100
              </span>
              
            
            </label>
            
          
          </li>
          
        
        </ul>
        
  
        
        
        
      
      </div>
      
    
    </ng-ais-refinement-list>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;

exports[`RefinementList should be hidden with autoHideContainer 1`] = `
<ng-component
  testedWidget={[Function NgAisRefinementList]}
>
  
        <ng-ais-instantsearch>
    
          
    <ng-ais-refinement-list>
      
      
      
      
    
    </ng-ais-refinement-list>
    
        
  </ng-ais-instantsearch>
      
</ng-component>
`;
